k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: onlineshop-deployment
  namespace: onlineshop-ns
  labels:
    app: onlineshop

spec:
  replicas: 3
  selector:
    matchLabels:
      app: onlineshop

  template:
    metadata:
      labels:
        app: onlineshop

    spec:
      containers:
      - name: onlineshop
        image: mubashirahmed324/online-shop
        ports:
        - containerPort: 5173

        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
