k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: onlineshop-service
  namespace: onlineshop-ns
spec:
  selector:
    app: onlineshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
